# FileManagement

./: .gitignore  CMakeLists.txt  README.md  meson.build
.github/: dependabot.yml
.github/workflows/: cmake_ubuntu.yml  meson_ubuntu.yml  msvc_windows.yml
examples/: main.cpp  meson.build
include/: FileWrapper.h
src/: FileWrapper.cpp  meson.build
tests/: FileWrapperTest.cpp  meson.build
